--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC - Igienizzazione Postazioni}
+\subsection{Igienizzazione Postazioni}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC-igienizzazionePostazioni.png}
-  \caption{UC  - Igienizzazione postazioni}
+    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-igienizzazionePostazioni.png}
+  \caption{UC- Igienizzazione postazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di igienizzazione delle postazioni da parte di un utente igienizzatore all'interno dell’applicazione.
@@ -20,7 +20,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 33 - Marca postazione igienizzata}
+\subsection{UC-34 Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -35,7 +35,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 	\end{itemize}
 \end{itemize}
 
-%\subsubsection{UC 41 - Annulla postazione igienizzata}
+%\subsubsection{UC-41 - Annulla postazione igienizzata}
 
 %\begin{itemize}%
 %\item \textbf{Attori primari:} igienizzatore;
@@ -50,7 +50,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 %		\end{itemize}
 %\end{itemize}
 
-\subsubsection{UC 34 - Marca stanza igienizzata}
+\subsection{UC-35 Marca stanza igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} igienizzatore;
@@ -65,7 +65,7 @@ Il presente diagramma vuole riassumere la possibilità di igienizzazione delle p
 		\end{itemize}
 \end{itemize}
 
-%\subsubsection{UC 43 - Marca stanza non igienizzata}
+%\subsubsection{UC-43 - Marca stanza non igienizzata}
 
 %\begin{itemize}
 %\item \textbf{Attori primari:} igienizzatore;
