--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-modCancProfilo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-modCancProfilo.tex
@@ -1,4 +1,4 @@
-\subsection{UC13-Modifica del profilo personale} 
+\subsection{UC-13 Modifica del profilo personale} 
 \begin{itemize}
 
 	\item \textbf{Attore primario:} utente autenticato;
@@ -14,8 +14,8 @@
     		\item  l'utente seleziona il campo dati da modificare. L'utente può modificare:
     		
     			\begin{itemize}
-        			\item il proprio nome (UC12.1); 
-        			\item il proprio cognome (UC12.2); 
+        			\item il proprio nome (UC-12.1); 
+        			\item il proprio cognome (UC-12.2); 
     			\end{itemize} 
     			
     		\item l'utente salva le modifiche apportate ai dati personali concludendo l'operazione di modifica.
@@ -25,7 +25,7 @@
 \end{itemize}
 
 
-\subsubsection{UC13.1-Modifica del nome dell'utente}
+\subsubsection{UC-13.1 Modifica del nome dell'utente}
 
 \begin{itemize}
 
@@ -45,13 +45,13 @@
 		
 	\item \textbf{Estensioni:}
 		\begin{enumerate}
-    		\item UC14-Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile.
+    		\item UC-14 Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile.
 		\end{enumerate}
 		
 \end{itemize}
 
 
-\subsubsection{UC13.2-Modifica del cognome dell'utente}
+\subsubsection{UC-13.2 Modifica del cognome dell'utente}
 \begin{itemize}
 	\item \textbf{Attore primario:} utente registrato;
 
@@ -69,12 +69,12 @@
 		
 	\item \textbf{Estensioni:} 
 	\begin{enumerate}
-    	\item UC14-Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile.
+    	\item UC-14 Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile.
 	\end{enumerate}
 \end{itemize}
 
 
-\subsubsection{UC14-Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile}
+\subsection{UC-14 Visualizzazione dell'errore legato alla modifica di campi dati di informazioni anagrafiche sull'applicazione mobile}
 \begin{itemize}
 	\item \textbf{Attore primario:} utente autenticato;
 
@@ -92,7 +92,7 @@
 		\end{enumerate}
 \end{itemize}
 
-\subsection{UC15-Cancellazione del profilo di un impiegato da parte dell'amministratore}
+\subsection{UC-15 Cancellazione del profilo di un impiegato da parte dell'amministratore}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
