--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-postazione.tex
@@ -56,7 +56,7 @@
 
 
 
-\subsection{UC-N Scarica report postazione}
+\subsection{UC-28 Scarica report postazione}
 \begin{itemize}
     \item \textbf{attori:} amministratore autenticato;
     \item \textbf{descrizione:} un amministratore pu\`{o} scaricare un report che sommarizza l'utilizzo della postazione.
