--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC - Stato Postazioni}
+\subsection{Stato Postazioni}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC-statoPostazioni.png}
-  \caption{UC  - Stato prenotazioni}
+    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-statoPostazioni.png}
+  \caption{UC- Stato prenotazioni}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di prenotazione delle prenotazioni da parte di un utilizzatore dell’applicazione.
@@ -21,7 +21,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 \end{itemize}
 
 
-\subsubsection{UC 20 - Marca postazione igienizzata}
+\subsection{UC-20 Marca postazione igienizzata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -36,7 +36,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 21 - Marca postazione sporca}
+\subsection{UC-21 Marca postazione sporca}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -50,7 +50,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 
 \newpage
 
-\subsubsection{UC 22 - Marca postazione occupata}
+\subsection{UC-22 Marca postazione occupata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -59,7 +59,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 \item \textbf{Postcondizione:} l'attore ha marcato con successo una postazione come occupata;
 \end{itemize}
 
-%\subsubsection{UC .5 - Conferma prenotazione della postazione}%
+%\subsubsection{UC-.5 - Conferma prenotazione della postazione}%
 
 %\begin{itemize}%
 %\item \textbf{Attori primari:} personale interno autenticato;%
@@ -73,7 +73,7 @@ Il presente diagramma vuole riassumere la possibilità di prenotazione delle pre
 %	\end{itemize}%
 %\end{itemize}%
 
-\subsubsection{UC 23 - Contrassegna postazione abilitata}
+\subsection{UC-23 Contrassegna postazione abilitata}
 
 \begin{itemize}
 \item \textbf{Attori primari:} amministratore;
