--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-visualizzazioneProfilo.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-visualizzazioneProfilo.tex
@@ -1,4 +1,4 @@
-\subsection{UC11-Visualizzazione del profilo personale da applicazione mobile}
+\subsection{UC-11 Visualizzazione del profilo personale da applicazione mobile}
 \begin{itemize}
 	\item \textbf{Attore primario:} utente autenticato;
 
@@ -11,14 +11,14 @@
    			 \item  l'utente seleziona la sezione "il mio profilo";
     		 \item  il sistema elabora la richiesta e permette ora la visualizzazione dei seguenti dati:
    			\begin{itemize}
-     			\item nome (UC10.1);
-         	    \item cognome (UC10.2);
+     			\item nome (UC-10.1);
+         	    \item cognome (UC-10.2);
    			\end{itemize}
 	   	\end{enumerate}
 \end{itemize}
 
 
-\subsubsection{UC 11.1-Visualizzazione del nome dell'utente da applicazione mobile}
+\subsubsection{UC-11.1 Visualizzazione del nome dell'utente da applicazione mobile}
 \begin{itemize}
 	\item \textbf{Attore primario:} utente autenticato;
 
@@ -33,7 +33,7 @@
 		\end{enumerate}
 \end{itemize}
 
-\subsubsection{UC11.2-Visualizzazione del cognome dell'utente da applicazione mobile}
+\subsubsection{UC-11.2 Visualizzazione del cognome dell'utente da applicazione mobile}
 \begin{itemize}
 	\item \textbf{Attore primario:} utente autenticato;
 
@@ -49,7 +49,7 @@
 \end{itemize}
 
 
-\subsection{UC12-Visualizzazione del profilo di un altro utente da applicazione web}
+\subsection{UC-12 Visualizzazione del profilo di un altro utente da applicazione web}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
@@ -62,14 +62,14 @@
     	\item  l'amministratore seleziona la sezione con i profili degli utenti;
     	\item  il sistema elabora la richiesta e permette ora la visualizzazione dei seguenti dati:
     	\begin{itemize}
-        	\item nome (UC 11.1-visualizzazione del nome dell'utente da applicazione web);
-        	\item cognome (UC 11.2-visualizzazione del cognome dell'utente da applicazione web);
-        	\item indirizzo e-mail (UC 11.3-visualizzazione dell'indirizzo e-mail dell'utente da applicazione web).
+        	\item nome (UC-11.1 visualizzazione del nome dell'utente da applicazione web);
+        	\item cognome (UC-11.2 visualizzazione del cognome dell'utente da applicazione web);
+        	\item indirizzo e-mail (UC-11.3 visualizzazione dell'indirizzo e-mail dell'utente da applicazione web).
     	\end{itemize}
 	\end{enumerate}
 \end{itemize}
 
-\subsubsection{UC12.1-Visualizzazione del nome di un altro utente da applicazione web}
+\subsubsection{UC-12.1 Visualizzazione del nome di un altro utente da applicazione web}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
@@ -84,7 +84,7 @@
 	\end{enumerate}
 \end{itemize}
 
-\subsubsection{UC12.2-Visualizzazione del cognome di un altro utente da applicazione web}
+\subsubsection{UC-12.2 Visualizzazione del cognome di un altro utente da applicazione web}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
@@ -99,7 +99,7 @@
 		\end{enumerate}
 \end{itemize}
 
-\subsubsection{UC12.3 -Visualizzazione dell'indirizzo e-mail di un altro utente da applicazione web}
+\subsubsection{UC-12.3 Visualizzazione dell'indirizzo e-mail di un altro utente da applicazione web}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore autenticato;
 
