--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Introduzione/main.tex
@@ -35,8 +35,8 @@ Nel documento sono presenti alcuni termini marcati in corsivo con una \emph{G} a
         \item \begin{verbatim}https://www.youtube.com/watch?v=X_KintgpWc8&feature=youtu.be\end{verbatim}
     \end{itemize}
     \item materiale didattico presentato a lezione durante il corso di Ingegneria del Software: https://www.math.unipd.it/~tullio/IS-1/2020/
-    \item ISO/IEC/IEEE 12207:1995: \begin{verbatim}https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207-1995.pdf\end{verbatim}
-    \item IEEE Std 830-1998: \begin{verbatim}https://ieeexplore.ieee.org/document/720574\end{verbatim}
+    \item ISO/IEC/IEEE 12207:1995: \begin{verbatim}https://www.math.unipd.it/~tullio/IS-1/2009/Approfondimenti/ISO_12207 1995.pdf\end{verbatim}
+    \item IEEE Std 830 1998: \begin{verbatim}https://ieeexplore.ieee.org/document/720574\end{verbatim}
     \item incontri con il proponente: 
     \begin{itemize}
         \item TODO: citare verbale
