--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/main.tex
@@ -1,10 +1,10 @@
-% \input{src/CasiDUso/src/UC-gestioneAutenticazione.tex}
+\input{src/CasiDUso/src/UC-gestioneAutenticazione.tex}
 
 \input{src/CasiDUso/src/UC-visualizzazioneProfilo.tex}
 
 \input{src/CasiDUso/src/UC-modCancProfilo.tex}
 
-% \input{src/CasiDUso/src/UC-crezionePrenotazione.tex}
+\input{src/CasiDUso/src/UC-creazionePrenotazione.tex}
 
 \input{src/CasiDUso/src/UC-statoPostazioni.tex}
 
@@ -12,4 +12,4 @@
 
 \input{src/CasiDUso/src/UC-stanza.tex}
 
-% \input{src/CasiDUso/src/UC-igienizzatore.tex}
+\input{src/CasiDUso/src/UC-igienizzazionePostazioni.tex}
