--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
@@ -1,9 +1,9 @@
-\subsubsection{UC - Creazione di una prenotazione}
+\subsection{Creazione di una prenotazione}
 
 \begin{figure}[h]
   \centering
-    \includegraphics[scale=0.5]{src/CasiDUso/Immagini/UC-creazionePrenotazione.png}
-  \caption{UC  - Creazione di una prenotazione}
+    \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
+  \caption{UC- Creazione di una prenotazione}
 \end{figure}
 
 Il presente diagramma vuole riassumere la possibilità di gestione delle prenotazioni da parte di un utente autenticato nell’applicazione.
@@ -21,7 +21,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 16 - Creazione di una prenotazione}
+\subsection{UC-16 Creazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -30,16 +30,56 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Postcondizione:} l'attore crea correttamente una prenotazione per la data ed ora scelta;
 \item \textbf{Scenario principale:} 
 	\begin{itemize}
-		\item l'attore seleziona la data in cui desidera prenotare una postazione[UC16.1];
-		\item l'attore seleziona la stanza in cui vuole prenotare una postazione dalla lista delle stanze abilitate[UC16.2];
+		\item l'attore seleziona la data in cui desidera prenotare una postazione[UC-16.1];
+		\item l'attore seleziona la stanza in cui vuole prenotare una postazione dalla lista delle stanze abilitate[UC-16.2];
 		\item l'attore visualizza la lista di postazioni prenotabili nella stanza selezionata per la data precedentemente selezionata;
-		\item l'attore seleziona la postazione che desidera prenotare[UC16.3];
-		\item l'attore seleziona l'orario della prenotazione tra la lista degli orari in cui la prenotazione è libera ed igienizzata[UC16.4];
+		\item l'attore seleziona la postazione che desidera prenotare[UC-16.3];
+		\item l'attore seleziona l'orario della prenotazione tra la lista degli orari in cui la prenotazione è libera ed igienizzata[UC-16.4];
 		\item il sistema elabora correttamente la richiesta, mandando in stato di “pending” la prenotazione;
 	\end{itemize}
 \end{itemize}
 
-%\subsubsection{UC 1.1 - Visualizzazione errore di prenotazione: prenotazione per determinata fascia oraria già esistente}
+\subsubsection{UC-16.1 Inserimento data}
+
+\begin{itemize}
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore vuole inserire la data in cui prenotare una postazione;
+\item \textbf{Precondizione:} l'attore seleziona una data valida dal calendario;
+\item \textbf{Postcondizione:} l'attore seleziona correttamente una data dal calendario;
+\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
+\end{itemize}
+
+\subsubsection{UC-16.2 Scelta della stanza da prenotare}
+
+\begin{itemize}
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore vuole selezionare la stanza in cui prenotare una postazione;
+\item \textbf{Precondizione:} l'attore seleziona una stanza valida dalla lista delle stanze disponibili ed attive;
+\item \textbf{Postcondizione:} l'attore seleziona correttamente una stanza;
+\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
+\end{itemize}
+
+\subsubsection{UC-16.3 Scelta della postazione da prenotare}
+
+\begin{itemize}
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore vuole selezionare una postazione valida dalla lista delle postazioni disponibili, attive ed igienizzate;
+\item \textbf{Precondizione:} l'attore seleziona una postazione valida dalla lista;
+\item \textbf{Postcondizione:} l'attore seleziona correttamente una postazione valida;
+\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
+\end{itemize}
+
+\subsubsection{UC-16.4 Inserimento ora}
+
+\begin{itemize}
+\item \textbf{Attori primari:} personale interno autenticato;
+\item \textbf{Descrizione:} l'attore vuole inserire l'orario in cui prenotare una postazione;
+\item \textbf{Precondizione:} l'attore seleziona un orario valido dalla lista degli orari disponibili per la postazione precedentemente selezionata;
+\item \textbf{Postcondizione:} l'attore seleziona correttamente un orario disponibile;
+\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta.
+\end{itemize}
+
+%\subsubsection{UC-1.1 - Visualizzazione errore di prenotazione: prenotazione per determinata fascia oraria già esistente}
 %\begin{itemize}
 %\item \textbf{Attori primari:} personale interno autenticato;
 %\item \textbf{Precondizione:} il personale interno sta cercando di prenotare una postazione in una data ed orario in cui la postazione risulta già prenotata da un altro utente;
@@ -47,7 +87,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 %\item \textbf{Scenario principale:} il personale interno autenticato visualizza un messaggio di errore in cui viene informato che la postazione risulta già occupata per la data e ora da lui scelti.
 %\end{itemize}
 
-%\subsubsection{UC 1.2 - Visualizzazione errore di prenotazione: postazione disabilitata da un amministratore}
+%\subsubsection{UC-1.2 - Visualizzazione errore di prenotazione: postazione disabilitata da un amministratore}
 %\begin{itemize}
 %\item \textbf{Attori primari:} personale interno autenticato;
 %\item \textbf{Precondizione:} il personale interno autenticato sta cercando di prenotare una postazione che risulta essere stata disabilitata da un amministratore;
@@ -56,7 +96,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 %\end{itemize}
 
 
-\subsubsection{UC 17 - Modifica di una prenotazione}
+\subsection{UC-17 Modifica di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -65,16 +105,16 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Postcondizione:} l'attore modifica correttamente una prenotazione per la nuova data/ora scelta;
 \item \textbf{Scenario principale:} 
 	\begin{itemize}
-		\item l'attore seleziona la nuova data in cui desidera prenotare una postazione[UC1.1];
-		\item l'attore seleziona la nuova stanza in cui vuole prenotare una postazione dalla lista delle stanze abilitate[UC1.2];
+		\item l'attore seleziona la nuova data in cui desidera prenotare una postazione[UC-1.1];
+		\item l'attore seleziona la nuova stanza in cui vuole prenotare una postazione dalla lista delle stanze abilitate[UC-1.2];
 		\item l'attore visualizza la lista di postazioni prenotabili nella stanza selezionata per la nuova data precedentemente selezionata;
-		\item l'attore seleziona la nuova postazione che desidera prenotare[UC1.3];
-		\item l'attore seleziona il nuovo orario della prenotazione tra la lista degli orari in cui la prenotazione è libera ed igienizzata[UC1.4];
+		\item l'attore seleziona la nuova postazione che desidera prenotare[UC-1.3];
+		\item l'attore seleziona il nuovo orario della prenotazione tra la lista degli orari in cui la prenotazione è libera ed igienizzata[UC-1.4];
 		\item il sistema elabora correttamente la richiesta, mandando in stato di “pending” la prenotazione;
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 18 - Cancellazione di una prenotazione}
+\subsection{UC-18 Cancellazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -86,12 +126,12 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 		\item il sistema elabora correttamente la richiesta;
 		\item il sistema restituisce un errore per i seguenti motivi:
 		\begin{itemize}
-			\item non è possibile cancellare una prenotazione per un orario passato[UC 3.1].
+			\item non è possibile cancellare una prenotazione per un orario passato[UC-3.1].
 		\end{itemize}
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 18.1 - Visualizzazione errore di cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
+\subsubsection{UC-18.1 Visualizzazione errore di cancellazione: tentativo di cancellazione di una prenotazione per un orario passato}
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
 \item \textbf{Precondizione:} il personale interno autenticato sta cercando di cancellare una prenotazione già usufruita in un orario passato;
@@ -99,7 +139,7 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 \item \textbf{Scenario principale:} il personale interno autenticato visualizza un messaggio di errore in cui viene informato che non è possibile cancellare una prenotazione per un orario passato.
 \end{itemize}
 
-\subsubsection{UC 19 - Visualizzazione di una prenotazione}
+\subsection{UC-19 Visualizzazione di una prenotazione}
 
 \begin{itemize}
 \item \textbf{Attori primari:} personale interno autenticato;
@@ -112,48 +152,8 @@ Il presente diagramma vuole riassumere la possibilità di gestione delle prenota
 	\end{itemize}
 \end{itemize}
 
-\subsubsection{UC 16.1 - Inserimento data}
 
-\begin{itemize}
-\item \textbf{Attori primari:} personale interno autenticato;
-\item \textbf{Descrizione:} l'attore vuole inserire la data in cui prenotare una postazione;
-\item \textbf{Precondizione:} l'attore seleziona una data valida dal calendario;
-\item \textbf{Postcondizione:} l'attore seleziona correttamente una data dal calendario;
-\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
-\end{itemize}
-
-\subsubsection{UC 16.2 - Scelta della stanza da prenotare}
-
-\begin{itemize}
-\item \textbf{Attori primari:} personale interno autenticato;
-\item \textbf{Descrizione:} l'attore vuole selezionare la stanza in cui prenotare una postazione;
-\item \textbf{Precondizione:} l'attore seleziona una stanza valida dalla lista delle stanze disponibili ed attive;
-\item \textbf{Postcondizione:} l'attore seleziona correttamente una stanza;
-\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
-\end{itemize}
-
-\subsubsection{UC 16.3 - Scelta della postazione da prenotare}
-
-\begin{itemize}
-\item \textbf{Attori primari:} personale interno autenticato;
-\item \textbf{Descrizione:} l'attore vuole selezionare una postazione valida dalla lista delle postazioni disponibili, attive ed igienizzate;
-\item \textbf{Precondizione:} l'attore seleziona una postazione valida dalla lista;
-\item \textbf{Postcondizione:} l'attore seleziona correttamente una postazione valida;
-\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta;
-\end{itemize}
-
-\subsubsection{UC 16.4 - Inserimento ora}
-
-\begin{itemize}
-\item \textbf{Attori primari:} personale interno autenticato;
-\item \textbf{Descrizione:} l'attore vuole inserire l'orario in cui prenotare una postazione;
-\item \textbf{Precondizione:} l'attore seleziona un orario valido dalla lista degli orari disponibili per la postazione precedentemente selezionata;
-\item \textbf{Postcondizione:} l'attore seleziona correttamente un orario disponibile;
-\item \textbf{Scenario principale:} il sistema elabora correttamente la richiesta.
-\end{itemize}
-
-
-%\subsubsection{UC 4.1 - Visualizzazione errore di prenotazione attiva: l'utente non ha alcuna prenotazione attiva}
+%\subsubsection{UC-4.1 - Visualizzazione errore di prenotazione attiva: l'utente non ha alcuna prenotazione attiva}
 %\begin{itemize}
 %\item \textbf{Attori primari:} personale interno autenticato;
 %\item \textbf{Precondizione:} il personale interno auteneticato sta cercando di visualizzare la lista delle sue prenotazioni, non avendone però alcuna attiva;
