--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-igienizzazionePostazioni.tex
@@ -1,6 +1,6 @@
 \subsection{Igienizzazione Postazioni}
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-igienizzazionePostazioni.png}
   \caption{UC- Igienizzazione postazioni}
