--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-statoPostazioni.tex
@@ -1,6 +1,6 @@
 \subsection{Stato Postazioni}
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-statoPostazioni.png}
   \caption{UC- Stato prenotazioni}
