--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/UC-creazionePrenotazione.tex
@@ -1,6 +1,6 @@
 \subsection{Creazione di una prenotazione}
 
-\begin{figure}[h]
+\begin{figure}[H]
   \centering
     \includegraphics[scale=0.5]{src/CasiDUso/immagini/UC-creazionePrenotazione.png}
   \caption{UC- Creazione di una prenotazione}
