piccole correzioni di sintassi

--- a/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/AnalisiRischi/src/StrutturaRischi.tex
@@ -1,4 +1,4 @@
-Gli aspetti su cui ci si è maggiormente concentrati sono:
+Gli aspetti su cui ci si è maggiormente concentrati sono descritti nei punti seguenti.
 
 \subsubsection{Tipo di rischio}
     Per identificare al meglio ogni potenziale rischio viene assegnata ad ognuno di essi una determinata sigla che indica, come da titolo, il tipo di rischio in cui ci si può imbattere e viene suddiviso nelle seguenti categorie:
