--- a/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/StrutturaDocumento.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Introduzione/src/StrutturaDocumento.tex
@@ -6,5 +6,5 @@ Nello specifico, gli aspetti sopracitati verranno suddivisi e trattati in rispet
         \item Pianificazione;
         \item Preventivo;
         \item Consuntivo di periodo;
-        \item Organigramma del gruppo;
+        \item Organigramma del gruppo.
     \end{itemize}
