--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio3.tex
@@ -17,7 +17,7 @@ Una volta approvati i \glo{requisiti} di ingresso, in seguito all'aggiudicazione
             \item strutturazione generale del sistema:
             \begin{itemize}
                 \item organizzazione di tutti i suoi elementi;
-                \item pianificazione di massima di un ordine di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti
+                \item pianificazione di massima di un ordine di sviluppo secondo i criteri di necessità, tipologia e quindi priorità dei requisiti.
             \end{itemize}
             \item valutazione delle componenti e tecnologie richieste:
             \begin{itemize}
