--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoFinale.tex
@@ -95,11 +95,12 @@ Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e 
 \textcolor{\secondaryColor}{\textbf{Fase}} &
 \textcolor{\secondaryColor}{\textbf{Costo \glo{fase} (in \euro{})}}\\	
 \endhead
-		
+
+Fase di Analisi						  &  4425 \\
 Progettazione Architetturale          &  4363 \\
 Progettazione di Dettaglio e Codifica & 6046  \\
 Validazione e Collaudo                &  2755 \\
-\textbf{Totale}                       &  13164 \\
+\textbf{Totale}                       &  17589 \\
 
 \end{longtable}
 }
