--- a/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Organigramma/main.tex
@@ -36,9 +36,9 @@
 		{Elvis Murtezan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
 		{Giovanni Grigoletto} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/giovanni.png}\\
 		{Andrea De Tomasi} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/andrea.png}\\
-		{Alessio Trevisan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Alessio Trevisan} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/alessio.png}\\
 		{Abdelwahad Kandoul} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/abdel.png}\\
-		{Filippo Pinton} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/Elvis.png}\\
+		{Filippo Pinton} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/filippo.png}\\
 		{Edoardo Caregnato} & 2021-01-11 & \includegraphics[scale=0.20]{./src/Organigramma/immagini/firme/edoardo.png}
 	\end{longtable}
 }
@@ -55,9 +55,9 @@
         {Elvis Murtezan} & 1096758 & {elvis.murtezan@studenti.unipd.it}\\   
         {Giovanni Grigoletto} & 1175087 & {giovanni.grigoletto.1@studenti.unipd.it}\\    
         {Andrea De Tomasi} & 1187099 & {andrea.detomasi@studenti.unipd.it}\\    
-        {Alessio Trevisan} & 1xxxxxxx & {alessio.trevisan@studenti.unipd.it}\\    
+        {Alessio Trevisan} & 1187399 & {alessio.trevisan@studenti.unipd.it}\\    
         {Abdelwahad Kandoul} & 1120176 & {abdelwahad.kandoul@studenti.unipd.it} \\    
-        {Filippo Pinton} & 1xxxxxxx & {filippo.pinton@studenti.unipd.it}\\    
+        {Filippo Pinton} & 1xxxxxx & {filippo.pinton@studenti.unipd.it}\\    
         {Edoardo Caregnato} & 1096077 & {edoardo.caregnato@studenti.unipd.it}\\       
 	\end{longtable}
 }
