fix struttura pianificazione

--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
@@ -1,7 +1,7 @@
-Questo stadio è relativo in gran parte allo sviluppo del codice e la sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare. In questa \glo{fase} principale di codifica ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto, conformemente a quanto richiesto dal secondo incontro di revisione programmato.
+Questo stadio è relativo in gran parte allo sviluppo del codice. In questa \glo{fase} principale di codifica ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto.
         
         \subsubsection{Periodo di svolgimento}
-        15 febbraio - 1 marzo 2021;
+        8 marzo 2021 - 19 marzo 2021;
         
         \subsubsection{Figure professionali coinvolte}
             \begin{itemize}
@@ -14,10 +14,10 @@ Questo stadio è relativo in gran parte allo sviluppo del codice e la sua conclu
 
         \subsubsection{Obiettivi}
         \begin{itemize}
+            \item correzione della documentazione secondo le direttive del committente;
             \item consolidamento delle componenti obbligatorie;
             \item inclusione delle componenti e requisiti desiderabili;
             \item rifinitura e miglioramento delle \glo{interfacce grafiche};
             \item \glo{verifica} del codice e delle funzionalità del prodotto;
-            \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
-            \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RP{}.
+            \item aggiornamento della documentazione.
         \end{itemize}
