--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneArchitetturale.tex
@@ -1,11 +1,11 @@
-\subsection{Progettazione Architetturale}
+\subsection{Progettazione}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}[h!] { C{4cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{3cm}}
-\caption{Tabella della divisione oraria della Progettazione Architetturale}\\
+\caption{Tabella della divisione oraria della Progettazione}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
@@ -68,7 +68,7 @@ La seguente tabella rappresenta per ogni ruolo le ore totali preventivate ed il 
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}{ C{3cm} C{2cm} C{4cm}}
-\caption{Tabella del costo risultante della Progettazione Architetturale}\\
+\caption{Tabella del costo risultante della Progettazione}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Ruolo}} & 
