--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneDettaglio.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoProgettazioneDettaglio.tex
@@ -1,4 +1,4 @@
-\subsection{Progettazione di Dettaglio e Codifica}
+\subsection{Codifica}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -6,7 +6,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 	\rowcolors{2}{\evenRowColor}{\oddRowColor}
 	\renewcommand{\arraystretch}{2}
 	\begin{longtable}[h!] { C{4cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{3cm}}
-	\caption{Tabella della divisione oraria della Progettazione di Dettaglio e Codifica}\\
+	\caption{Tabella della divisione oraria di Codifica}\\
 	\rowcolor{\primaryColor}
 	
 	\textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
@@ -103,7 +103,7 @@ La seguente tabella rappresenta, per ruolo, le ore preventivate totali e il corr
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}{ C{3cm} C{2cm} C{4cm}}
-\caption{Tabella del costo risultante della Programmazione di Dettaglio e Codifica}\\
+\caption{Tabella del costo risultante di Codifica}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Ruolo}} & 
