--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoValidazioneCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/PreventivoValidazioneCollaudo.tex
@@ -1,4 +1,4 @@
-\subsection{Validazione e Collaudo}
+\subsection{Collaudo}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -7,7 +7,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 	\rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}[h!] { C{4cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{3cm}}
-\caption{Tabella della divisione oraria di Validazione e Collaudo}	\\
+\caption{Tabella della divisione oraria di Collaudo}	\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
@@ -101,7 +101,7 @@ La seguente tabella rappresenta le ore totali investite e il corrispondente cost
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}{ C{3cm} C{2cm} C{4cm}}
-\caption{Tabella del costo risultante di Validazione e Collaudo}\\
+\caption{Tabella del costo risultante di Collaudo}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Ruolo}} & 
