--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio4.tex
@@ -1,7 +1,7 @@
-Da qui in poi si entra nella parte più specifica di costruzione del sistema. Per avviare lo sviluppo questo stadio conclude inizialmente la \glo{fase} di progettazione al dettaglio ed inzia quella di codifica. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. 
+Da qui in poi si entra nella parte più specifica di costruzione del sistema. Per avviare lo sviluppo questo stadio prosegue ed approfondisce la \glo{fase} di progettazione al dettaglio ed inzia quella di codifica. Viene quindi prodotta una prima stesura del codice con lo scopo di mettere insieme un iniziale prototipo stabile del sistema, avente le minime funzionalità essenziali e basilari. La sua conclusione corrisponde di fatto alla seconda \glo{milestone} principale che il gruppo \Gruppo{} intende rispettare, in vista dell'incontro di revisione programmato.
         
         \subsubsection{Periodo di svolgimento}
-        28 gennaio 2021 - 14 febbraio 2021;
+        1 febbraio 2021 - 1 marzo 2021;
         
         \subsubsection{Figure professionali coinvolte}
             \begin{itemize}
@@ -21,5 +21,6 @@ Da qui in poi si entra nella parte più specifica di costruzione del sistema. Pe
             \end{itemize}
             \item progettazione di base delle \glo{interfacce} utente;
             \item \glo{verifica} del codice e delle funzionalità del prodotto;
-            \item aggiornamento della documentazione.
+            \item aggiornamento, verifica e correzione generale dell'intera documentazione redatta fino a questo momento;
+            \item consegna del \glo{deliverable} necessario, in vista dell'incontro con il committente per la \RP{}.
         \end{itemize}
